--- a/template-html/post-page.html
+++ b/template-html/post-page.html
@@ -46,11 +46,11 @@
 		</nav>
 	</header>
 
-		<div class="cover" style="background-image: url(images/sb.jpg);">
+		<div class="cover" style="background-image: url(images/by-water.jpg);">
 			<div class="tint">
 				<div class="row">
 					<div class="small-6 small-centered large-6 large-centered columns title-position">
-						<h1 class="page-title">State Bird Provisions</h1>
+						<h1 class="page-title">By Water</h1>
 					</div>
 				</div>
 				<div class="row">
@@ -89,9 +89,8 @@
 		</div><!-- end header bg -->
 
 		<!-- post articles -->
-		<div class="row">
-		<div class="small-12 large-6 large-centered copy-box post">
-				<p>Well, the way they make shows is, they make one show. That show's called a pilot. Then they show that show to the people who make shows, and on the strength of that one show they decide if they're going to make more shows. Some pilots get picked and become television programs. Some don't, become nothing. She starred in one of the ones that became nothing.
+		<main>
+				<p>Well, the way they make shows is, they make one show. That show's called a pilot. Then they show that show to the people who make shows, and on the strength of that one show they decide if they're going to make more shows. Some pilots get picked and <a href="#">become television programs</a>. Some don't, become nothing. She starred in one of the ones that became nothing.
 <br><br>
 You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out. Now, I don't know exactly when we turned on each other, but I know that seven of us survived the slide... and only five made it out. Now we took an oath, that I'm breaking now. We said we'd say it was the snow that killed the other two, but it wasn't. Nature is lethal but it doesn't hold a candle to man.
 <br><br>
@@ -99,17 +98,22 @@ The path of the righteous man is beset on all sides by the iniquities of the sel
 
 		<p>Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most popular gun in American crime. Do you believe that shit? It actually says that in the little book that comes with it: the most popular gun in American crime. Like they're actually proud of that shit. </p>
 
-		<img src="images/liho.jpg">
+		<figure class='full-width'>
+			<img src="images/bw-1.jpg">
+			<figcaption>Some text.</figcaption>
+		</figure>
+
 
 		<p>Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most popular gun in American crime. Do you believe that shit? It actually says that in the little book that comes with it: the most popular gun in American crime. Like they're actually proud of that shit. </p>
 
-		<img src="images/ladies.jpg">
+		<figure class='full-width'>
+			<img src="images/nice-or-leave.jpg">
+			<figcaption>Some text.</figcaption>
+		</figure>
 
 		<p>Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most popular gun in American crime. Do you believe that shit? It actually says that in the little book that comes with it: the most popular gun in American crime. Like they're actually proud of that shit. </p>
 
-			</div>
-
-		</div><!-- row -->
+		</main>
 		<!-- post articles -->
 
 		<!-- Next post -->
@@ -120,8 +124,8 @@ The path of the righteous man is beset on all sides by the iniquities of the sel
 					<div class="large-6 columns next-previous" style="background-image: url(images/pollo.jpg);">
 						<div class="shade"></div>
 							<div class="hover">
-								<div class="next">Previous Post</div>
-								<div class="next-post-title">Mr. Pollo</div>
+								<div class="previous">Previous Post</div>
+								<div class="previous-router-title">Mr. Pollo</div>
 							</div>
 					</div>
 				</a>
@@ -131,7 +135,7 @@ The path of the righteous man is beset on all sides by the iniquities of the sel
 						<div class="shade"></div>
 							<div class="hover">
 								<div class="next">Next Post</div>
-								<div class="next-post-title">Trou normand</div>
+								<div class="next-router-title">Trou normand</div>
 							</div>
 					</div>
 				</a>
